main/static/main/style.css
/* ... */
/* REGISTER */

.register-form {
	margin-top: 4vw;
	text-align: left;
}

.register-text {
	margin-left: 5vw;
	font-family: "Roboto-Light", sans-serif;
	font-size: 1vw;
}

.not-member {
	margin: 10vw;
	font-family: "Roboto-Light", sans-serif;
	text-align: justify;
	font-size: 1vw;
}

.register-form button {
	margin-top: 2vw;
	margin-left: 5vw;
	margin-bottom: 7vw;
	font-family: "Roboto-Light", sans-serif;
	font-size: 1vw;
}

@media screen and (max-width: 800px) {
	.register-form {
		margin-top: 6vw;
	}

	.register-text {
		font-size: 4vw;
	}

	.not-member {
		font-size: 3vw;
		margin: 50vw 5vw;
	}

	.register-form button {
		background: #3D94F6;
		background-image: -webkit-linear-gradient(top, #3D94F6, #1E62D0);
		background-image: -moz-linear-gradient(top, #3D94F6, #1E62D0);
		background-image: -ms-linear-gradient(top, #3D94F6, #1E62D0);
		background-image: -o-linear-gradient(top, #3D94F6, #1E62D0);
		background-image: linear-gradient(to bottom, #3D94F6, #1E62D0);
		-webkit-border-radius: 9px;
		-moz-border-radius: 9px;
		border-radius: 9px;
		color: #FFFFFF;
		font-family: sans-serif;
		font-size: 25px;
		font-weight: 100;
		padding: 20px;
		text-decoration: none;
		display: inline-block;
		cursor: pointer;
		text-align: center;
	}
}

/* ACCOUNT */

.account {
	box-shadow: inset 0 10px 10px var(--comite-shadow-color);
	margin-bottom: 100px;
	text-align: left;
}

.account h2 {
	text-shadow: 3px 3px 3px lightgrey;
}

.account div {
	margin-top: 3vw;
	display: flex;
	width: 100%;
}

.account img {
	margin: 3vw 3vw 3vw 4vw;
	width: 15vw;
	height: 15vw;
	border-radius: 15vw;
}

.account .coord {
	display: inline;
	padding-left: 2vw;
	border-left: 3px solid black;
	margin-bottom: 2vw;
}

.account h4 {
	padding-left: 5vw;
	font-size: 1.7vw;
	font-family: 'Open Sans', sans-serif;
	font-weight: bold;
}

.account p {
	padding-left: 5vw;
	padding-right: 5vw;
	font-size: 1.5vw;
	font-family: 'Open Sans', sans-serif;
	text-align: justify;
	text-justify: inter-word;
}

@media screen and (max-width: 800px) {
	.account div {
		display: table;
		text-align: center;
		margin: 0;
	}

	.account h4 {
		padding-left: 7vw;
		font-size: 4vw;
	}

	.account p {
		font-size: 4vw;
		padding-left: 7vw;
		padding-right: 7vw;
	}

	.account .coord {
		border: none;
		text-align: left;
		padding: 0;
		margin: 0;
	}

	.account img {
		margin: 3vw;
		width: 50vw;
		height: 50vw;
		border-radius: 50vw;
	}
}

/* POST */

.post {
	box-shadow: inset 0 10px 10px var(--comite-shadow-color);
	margin-bottom: 5vw;
}

.post h2 {
	text-shadow: 3px 3px 3px lightgrey;
	margin-bottom: 5vw;
}

.post p {
	padding-left: 15vw;
	padding-right: 15vw;
	text-align: justify;
	text-justify: inter-word;
	font-size: 1.3vw;
	font-family: 'Open Sans', sans-serif;
}

@media screen and (max-width: 800px) {
	.post p {
		font-size: 4vw;
		padding-left: 7vw;
		padding-right: 7vw;
	}
}

/* CHANTS */

.chants {
	box-shadow: inset 0 10px 10px var(--comite-shadow-color);
	padding-left: 20vw;
	padding-right: 20vw;
	text-align: left;
	font-family: 'Open Sans', sans-serif;
	margin-bottom: 5vw;
	padding-top: 1vw;
}

.chants h4 {
	font-size: 1.2vw;
	font-weight: bold;
}

.chants p {
	font-size: 1vw;
}

@media screen and (max-width: 800px) {
	.chants {
		box-shadow: inset 0 10px 10px var(--comite-shadow-color);
		padding-left: 5vw;
		padding-right: 5vw;
		text-align: left;
		font-family: 'Open Sans', sans-serif;
		margin-bottom: 5vw;
		padding-top: 1vw;
	}

	.chants h4 {
		font-size: 3.5vw;
		font-weight: bold;
	}

	.chants p {
		font-size: 3vw;
	}
}

/* EVENT */

.event {
	box-shadow: inset 0 10px 10px var(--comite-shadow-color);
	padding-left: 15vw;
	padding-right: 15vw;
	text-align: justify;
	font-family: 'Open Sans', sans-serif;
	margin-bottom: 5vw;
}

.event h2::after {
	border: 2px solid black;
	box-shadow: 3px 3px 3px grey;
}

.event a {
	color: royalblue;
	display: inline-block;
}

.event a p {
	font-weight: bold;
}

.event p {
	font-size: 1vw;
}

.event img {
	display: block;
	margin-left: auto;
	margin-right: auto;
	width: 70vw;
}

@media screen and (max-width: 800px) {
	.event p {
		font-size: 3vw;
	}
}

/* EVENTS */

.events {
	background-color: var(--album-bg-color);
	box-shadow: inset 0 10px 10px var(--album-shadow-color);
}

.events a {
	display: inline-block;
}

.events a:hover {
	text-decoration: underline;
	color: var(--album-text-color);
}

.events h2 {
	color: var(--album-text-color);
	text-shadow: 3px 3px 3px var(--album-shadow-color);
}

.events h2::after {
	border: 2px solid var(--album-text-color);
	box-shadow: 3px 3px 3px var(--album-shadow-color);
}

.events h3 {
	color: var(--album-text-color);
	text-shadow: 3px 3px 3px var(--album-shadow-color);
}

@media screen and (max-width: 800px) {
	.events .photos img {
		width: 100%;
		display: block;
	}
}

/* ALBUM */

.album {
	background-color: var(--album-bg-color);
	box-shadow: inset 0 10px 10px var(--album-shadow-color);
}

.album h2 {
	color: var(--album-text-color);
	text-shadow: 3px 3px 3px var(--album-shadow-color);
}

.album h2::after {
	border: 2px solid var(--album-text-color);
	box-shadow: 3px 3px 3px var(--album-shadow-color);
}

.album h3 {
	color: var(--album-text-color);
	text-shadow: 3px 3px 3px var(--album-shadow-color);
}

.album a {
	color: var(--album-text-color);
	display: inline-block;
}

.album img {
	max-height: 38vw;
	max-width: 80vw;
	display: block;
	margin: 2vw auto;
}

@media screen and (max-width: 800px) {
	.album img {
		max-width: none;
	}
}

/* PHOTOS */

.photos {
	overflow: auto;
	white-space: nowrap;
}

.photos img {
	height: 25vw;
	display: inline-block;
}

@media screen and (max-width: 800px) {
	.photos {
		padding-bottom: 0;
	}

	.photos img {
		max-height: 60vw;
		width: auto;
		height: auto;
	}
}

/* AFFICHES */

.affiche img {
	max-height: 30vw;
	max-width: 50vw;
	display: block;
	margin: 1vw auto;
}

@media screen and (max-width: 800px) {
	.affiche img {
		width: 100%;
		max-width: none;
		max-height: none;
		margin: 0;
	}
}
/* ... */

